--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,39 +1,73 @@
 ---
 const today = new Date();
+
+const { title, description, image = '/bgfooteribg.png' } = Astro.props;
+const { title2, description2, image2 = '/bgfootersmall.png' } = Astro.props;
+
 ---
 
 <footer>
-	&copy; {today.getFullYear()} ZeForge Zenica
-	<div class="social-links">
-		<a href="https://github.com/zeforgezenica/smetoviba" target="_blank">
-			<span class="sr-only">Go to Astro's GitHub repo</span>
-			<svg viewBox="0 0 16 16" aria-hidden="true" width="32" height="32" astro-icon="social/github"
-				><path
-					fill="currentColor"
-					d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"
-				></path></svg
-			>
-		</a>
-	</div>
+	<br>
+	<div class="image"></div>
+	<div class="maincontainer">
+	<div class="container1">
+		<h3>KONTAKT INFORMACIJE</h3>
+		<p>Smetovi, Zenica, Bosna i Hercegovina</p>
+		<p>061 604 148</p>
+		<p>mail@gmail.com</p>
+		</div>
+	<div class="container2">
+			<h3>NEWSLETTER</h3>
+			<p>Enter your email:</p>
+			<input placeholder="johndoe@gmail.com"/>
+			</div>
+		</div>
+<center>	&copy; Smetovi {today.getFullYear()} </center></div>
+</div>
 </footer>
-<style>
-	footer {
-		padding: 2em 1em 6em 1em;
-		background: linear-gradient(var(--gray-gradient)) no-repeat;
-		color: rgb(var(--gray));
-		text-align: center;
+<style define:vars={{ image: `url("${image}")` , image2:`url("${image2}")`  }}>
+
+	.image {
+
+		background-image: var(--image);
+		background-size:cover;
+		height:350px;
 	}
-	.social-links {
+	h3{
+		color:white;
+	}
+	input{
+
+		padding:10px;
+		border-radius:15px;
+		border:0;
+	}
+	.maincontainer{
+		background-color:#171440;
+		padding:20px;
+		color: rgb(var(--gray));
 		display: flex;
-		justify-content: center;
-		gap: 1em;
-		margin-top: 1em;
+		align-items: flex-start; 
+		text-align:center;
 	}
-	.social-links a {
-		text-decoration: none;
-		color: rgb(var(--gray));
+	.container1,.container2{
+		width:50%;
 	}
-	.social-links a:hover {
-		color: rgb(var(--gray-dark));
+	@media (max-width: 768px){
+  .maincontainer {
+    flex-direction: column;
+  }
+  .container1,.container2{
+		width:100%;
+		padding-bottom:20px;
 	}
+	.image{
+		background-image: var(--image2);
+		width: 100%;
+		height:450px;
+  background-size: cover; 
+  background-position: 50% 5%; 
+  background-repeat: no-repeat; 
+	}
+  }
 </style>
