organizations and blog pages🤙🏿

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -30,7 +30,8 @@ import { SITE_TITLE } from '../consts';
 <style>
 	header {
 		padding: 0 1em;
-		height: 0px;
+		height: 64px;
+		background-color: RGBA(255, 255, 255, 0.5);
 	}
 	
 	nav {
