--- a/src/pages/organizations.astro
+++ b/src/pages/organizations.astro
@@ -7,6 +7,13 @@ import Layout from '../layouts/BlogPost.astro';
 	description="Lorem ipsum dolor sit amet"
 	pubDate={new Date('August 08 2021')}
 >
-
+<script type="text/javascript">
+    function googleTranslateElementInit() {
+      new google.translate.TranslateElement({pageLanguage: 'en', layout: google.translate.TranslateElement.InlineLayout.SIMPLE}, 'google_translate_element');
+    }
+    </script>
+    
+    <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+  <div id="google_translate_element"></div>
 <h1>Na ovoj stranici će biti prikazane sve organizacije koje imaju veze sa planinom Smetovi</h1>
 </Layout>
