remove duplicate code & fix formatting

--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -32,7 +32,7 @@ const posts = (await getCollection('blog')).sort(
 											<p class="date mb-0 text-gray-400">
 												<FormattedDate date={post.data.pubDate} />
 											</p>
-											<h4 class="title font-bold font-exo2 text-lg sm:text-base md:text-xl lg:text-2xl xl:text-3xl font-bold">{post.data.title}</h4>
+											<h4 class="title font-bold font-exo2 text-lg sm:text-base md:text-xl lg:text-2xl xl:text-3xl">{post.data.title}</h4>
 											<button>Pročitaj više</button>
 										</div>
 									</div>
