--- a/src/pages/map.astro
+++ b/src/pages/map.astro
@@ -3,8 +3,23 @@ import BaseHead from "../components/BaseHead.astro";
 import Header from '../components/Header.astro'; 
 import Footer from '../components/Footer.astro'; 
 import { SITE_TITLE, SITE_DESCRIPTION } from '../consts'; 
-
 import MapComponent from "../components/MapComponent";
+import { getCollection } from "astro:content";
+import type { MapPin } from "../models/map.pin.model";
+
+const organizations = await getCollection('organizations');
+
+const pins: MapPin[] = organizations.map(org => ({
+  type: org.data.type,
+  title: org.data.title,
+  location: org.data.location,
+  path: `/organizations/${org.slug}/`,
+  img: org.data.heroImage,
+}));
+
+//log mappins in console
+console.log("Map Pins:")
+console.log(pins);
 ---
 
 <style>
@@ -23,7 +38,7 @@ import MapComponent from "../components/MapComponent";
 <body>
     <Header />
     <main>
-        <MapComponent client:load/>
+        <MapComponent client:load {pins}/>
     </main>
     <Footer />
   </body>
