--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,11 +1,10 @@
 ---
 import HeaderLink from './HeaderLink.astro';
-import { SITE_TITLE } from '../consts';
 ---
 
-<header>
+<header class="fixed top-0 left-0 blur-background w-full shadow-md z-10">
 	<nav>
-		<img id="navbar-logo" src="/smetovi-logo.png" alt="" srcset="">
+		<img id="navbar-logo" src="/smetovi-logo.png" alt="Smetovi Logo" class="p-2">
 		<div class="internal-links">
 			<HeaderLink href="/map">Mapa</HeaderLink>
 			<HeaderLink href="/">Home</HeaderLink>
@@ -14,53 +13,59 @@ import { SITE_TITLE } from '../consts';
 			<HeaderLink href="/events">Događaji</HeaderLink>
 			<HeaderLink>Kontakt</HeaderLink>
 		</div>
-		<div class="social-links">
-			<a href="https://github.com/zeforgezenica/smetoviba" target="_blank">
-				<span class="sr-only">Go to Astro's GitHub repo</span>
-				<svg viewBox="0 0 16 16" aria-hidden="true" width="32" height="32"
-					><path
-						fill="currentColor"
-						d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"
-					></path></svg
+		
+		<div class="flex">
+			<div class="weather flex items-center justify-center">
+				<img 
+					src="https://icons.veryicon.com/png/o/miscellaneous/alibaba-enterprise-intelligence-general-basic/weather-unknown-1.png" 
+					alt="Trenutno vrijeme" 
+					style="max-height: 32px; max-width: 32px;"
 				>
+			</div>	
+			<a 
+				href="https://github.com/zeforgezenica/smetoviba" 
+				target="_blank" 
+				class="flex items-center justify-center"
+			>
+				<span class="sr-only">Go to Astro's GitHub repo</span>
+				<img 
+					src="https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg" 
+					alt="GitHub" 
+					style="max-width: 32px; max-height: 32px;">
 			</a>
 		</div>
 	</nav>
 </header>
 <style>
+
 	header {
-		padding: 0 1em;
-		height: 64px;
-		background-color: RGBA(255, 255, 255, 0.5);
+		max-height: 54px;
 	}
-	
 	nav {
 		display: flex;
 		align-items: center;
-		justify-content: space-between;
+		justify-content: space-around;
 	}
-	nav a {
-		padding: 1em 0.5em;
+	nav a, .weather {
+		padding: 0 0.5em;
+	}
+	
+	.internal-links a {
 		color: var(--black);
 		border-bottom: 4px solid transparent;
 		text-decoration: none;
+		font-size: 18px;
 	}
-	nav a.active {
-		text-decoration: none;
-		border-bottom-color: var(--accent);
+	.internal-links a:hover {
+		border-bottom: 4px solid var(--pumpkin-orange);
+		transition: border-bottom-color 0.3s ease-in-out;
+	}
+	.internal-links a {
+		transition: border-bottom-color 0.3s ease-in-out;
 	}
 
 	nav img {
 		width: 20vw;
 	}
 
-	.social-links,
-	.social-links a {
-		display: flex;
-	}
-	@media (max-width: 720px) {
-		.social-links {
-			display: none;
-		}
-	}
 </style>
