--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -17,9 +17,9 @@
   --gray-gradient: rgba(var(--gray-light), 50%), #fff;
   --box-shadow: 0 2px 6px rgba(var(--gray), 25%),
     0 8px 24px rgba(var(--gray), 33%), 0 16px 32px rgba(var(--gray), 33%);
-  /* --pastel-green: #77dd77;
+  --pastel-green: #77dd77;
   --tomato-red: #ff6347;
-  --pumpkin-orange: #f6901e; */
+  --pumpkin-orange: #f6901e;
 }
 @font-face {
   font-family: "Exo2";
@@ -182,4 +182,10 @@ ul {
   width: 100%;
   height: 2px;
   background: linear-gradient(to right, transparent, lightgray);
+}
+
+.blur-background {
+  background: rgba(255, 255, 255, 0.2);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
 }
