--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,25 +5,6 @@ import Footer from '../components/Footer.astro';
 import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 ---
 
-<style>
-	/* Add this CSS for the background image */
-	.landing-background {
-				background-image: url('/landing-image.png'); /* Update with your image path */
-				background-size: cover; /* Cover the entire area */
-				background-position: center; /* Center the image */
-				height: 100vh; /* Full viewport height */
-				width: 100vw;
-				color: white; /* Optional: change text color for better visibility */
-				display: flex; /* Use Flexbox */
-				justify-content: center; /* Center horizontally */
-				align-items: center; 
-	}
-
-	main img {
-		max-width: 100;
-		height: auto;
-	}
-</style>
 
 <!doctype html>
 <html lang="en">
@@ -38,3 +19,21 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 		<Footer />
 	</body>
 </html>
+
+<style>
+	.landing-background {
+		background-image: url('/landing-image.png'); 
+		background-size: cover; 
+		background-position: center; 
+		height: 100vh; 
+		width: 100vw;
+		color: white; 
+		display: flex; 
+		justify-content: center; 
+		align-items: center; 
+	}
+	main img {
+		max-width: 100;
+		height: auto;
+	}
+</style>
