weather icon map

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,7 +1,7 @@
 ---
 import HeaderLink from './HeaderLink.astro';
 import BurgerMenu from './BurgerMenu.tsx';
-import Weather from './WeatherComponent';
+import Weather from './WeatherComponent/WeatherComponent.tsx';
 ---
 
 <script is:inline>
