--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,6 +2,7 @@
 import HeaderLink from './HeaderLink.astro';
 import BurgerMenu from './BurgerMenu.tsx';
 import Weather from './WeatherComponent/WeatherComponent.tsx';
+import '@fortawesome/fontawesome-free/css/all.min.css';
 ---
 
 <script is:inline>
