move burger menu css to dedicated file

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,6 @@
 ---
 import HeaderLink from './HeaderLink.astro';
-import BurgerMenu from './BurgerMenu.tsx';
+import BurgerMenu from './BurgerMenu/BurgerMenu';
 import Weather from './WeatherComponent/WeatherComponent.tsx';
 import '@fortawesome/fontawesome-free/css/all.min.css';
 ---
